management-service: Improve http requests with proper empty map creation, add String.join to URL parameter creator